# Elementary_QR

./: .goutputstream-O3TONZ  CMakeLists.txt  MainWindow.vala  QRApp.vala  QREncoder.vala  QRImageBox.vala  README.md  TODO  eQR.avprj  meson.build  resources.c
data/: CMakeLists.txt  elementary_qr.gresource.xml  elementary_qr.gschema.xml
data/interface/: elementary_qr.ui  qr_box.ui
data/local/: CMakeLists.txt
doc/: CMakeLists.txt
po/: CMakeLists.txt  POTFILES.in
prototype/: ElementaryQR.vala  QRGen  QRGen.vala  QRImageBox.c  QRImageBox.vala  main_window.glade  main_window.glade~
prototype/vapi/: =  libqrencode.vapi  qrcode.txt  test.c  test.out  test.vala
src/: CMakeLists.txt  Dialogs.vala  FileManager.vala  MainWindow.vala  QREncoder.vala  QRImageBox.vala  Utils.vala  meson.build
vapi/: libqrencode.vapi
views/: elementary_qr.gresources.xml  elementary_qr.ui  qr_box.ui
